[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/common/assets/DetailTiles.tres" type="TileSet" id=1]
[ext_resource path="res://scenes/common/assets/GroundTiles.tres" type="TileSet" id=2]
[ext_resource path="res://player/princess_walking.png" type="Texture" id=3]
[ext_resource path="res://cinematic/ending/Ending.gd" type="Script" id=4]
[ext_resource path="res://cinematic/FadeToBlack.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/common/DarkLight.tscn" type="PackedScene" id=6]

[sub_resource type="Animation" id=1]
resource_name = "anime"
length = 5.3
tracks/0/type = "value"
tracks/0/path = NodePath("First Guard/Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6, 3.7, 3.8, 3.9, 4, 4.1, 4.2, 4.3, 4.4, 4.5, 4.6, 4.7, 4.8, 4.9, 5, 5.1, 5.2, 5.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 24, 72 ), Vector2( 24, 80 ), Vector2( 24, 88 ), Vector2( 24, 96 ), Vector2( 24, 104 ), Vector2( 24, 112 ), Vector2( 24, 120 ), Vector2( 24, 128 ), Vector2( 24, 136 ), Vector2( 24, 144 ), Vector2( 24, 152 ), Vector2( 24, 160 ), Vector2( 24, 168 ), Vector2( 24, 176 ), Vector2( 24, 184 ), Vector2( 24, 192 ), Vector2( 24, 200 ), Vector2( 24, 208 ), Vector2( 24, 216 ), Vector2( 24, 224 ), Vector2( 24, 232 ), Vector2( 24, 240 ), Vector2( 24, 248 ), Vector2( 24, 256 ), Vector2( 24, 264 ), Vector2( 24, 272 ), Vector2( 24, 280 ), Vector2( 24, 288 ), Vector2( 24, 296 ), Vector2( 24, 304 ), Vector2( 24, 312 ), Vector2( 24, 320 ), Vector2( 24, 328 ), Vector2( 24, 336 ), Vector2( 24, 344 ), Vector2( 24, 352 ), Vector2( 24, 360 ), Vector2( 24, 368 ), Vector2( 24, 376 ), Vector2( 24, 384 ), Vector2( 24, 392 ), Vector2( 24, 400 ), Vector2( 24, 408 ), Vector2( 24, 416 ), Vector2( 24, 424 ), Vector2( 24, 432 ), Vector2( 24, 440 ), Vector2( 24, 448 ), Vector2( 24, 456 ), Vector2( 24, 464 ), Vector2( 24, 472 ), Vector2( 24, 480 ), Vector2( 24, 488 ), Vector2( 24, 496 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("First Guard/Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6, 3.7, 3.8, 3.9, 4, 4.1, 4.2, 4.3, 4.4, 4.5, 4.6, 4.7, 4.8, 4.9, 5, 5.1, 5.2, 5.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 0, 1, 2, 3, 0, 1, 2, 3, 0, 1, 2, 3, 0, 1, 2, 3, 0, 1, 2, 3, 0, 1, 2, 3, 0, 1, 2, 3, 0, 1, 2, 3, 0, 1, 2, 3, 0, 1, 2, 3, 0, 1, 2, 3, 0, 1, 2, 3, 0, 1 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 3.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "fade1"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "anime"
length = 5.3
tracks/0/type = "value"
tracks/0/path = NodePath("Last Guard/Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6, 3.7, 3.8, 3.9, 4, 4.1, 4.2, 4.3, 4.4, 4.5, 4.6, 4.7, 4.8, 4.9, 5, 5.1, 5.2, 5.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 56, 72 ), Vector2( 56, 80 ), Vector2( 56, 88 ), Vector2( 56, 96 ), Vector2( 56, 104 ), Vector2( 56, 112 ), Vector2( 56, 120 ), Vector2( 56, 128 ), Vector2( 56, 136 ), Vector2( 56, 144 ), Vector2( 56, 152 ), Vector2( 56, 160 ), Vector2( 56, 168 ), Vector2( 56, 176 ), Vector2( 56, 184 ), Vector2( 56, 192 ), Vector2( 56, 200 ), Vector2( 56, 208 ), Vector2( 56, 216 ), Vector2( 56, 224 ), Vector2( 56, 232 ), Vector2( 56, 240 ), Vector2( 56, 248 ), Vector2( 56, 256 ), Vector2( 56, 264 ), Vector2( 56, 272 ), Vector2( 56, 280 ), Vector2( 56, 288 ), Vector2( 56, 296 ), Vector2( 56, 304 ), Vector2( 56, 312 ), Vector2( 56, 320 ), Vector2( 56, 328 ), Vector2( 56, 336 ), Vector2( 56, 344 ), Vector2( 56, 352 ), Vector2( 56, 360 ), Vector2( 56, 368 ), Vector2( 56, 376 ), Vector2( 56, 384 ), Vector2( 56, 392 ), Vector2( 56, 400 ), Vector2( 56, 408 ), Vector2( 56, 416 ), Vector2( 56, 424 ), Vector2( 56, 432 ), Vector2( 56, 440 ), Vector2( 56, 448 ), Vector2( 56, 456 ), Vector2( 56, 464 ), Vector2( 56, 472 ), Vector2( 56, 480 ), Vector2( 56, 488 ), Vector2( 56, 496 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Last Guard/Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6, 3.7, 3.8, 3.9, 4, 4.1, 4.2, 4.3, 4.4, 4.5, 4.6, 4.7, 4.8, 4.9, 5, 5.1, 5.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 0, 1, 2, 3, 0, 1, 2, 3, 0, 1, 2, 3, 0, 1, 2, 3, 0, 1, 2, 3, 0, 1, 2, 3, 0, 1, 2, 3, 0, 1, 2, 3, 0, 1, 2, 3, 0, 1, 2, 3, 0, 1, 2, 3, 0, 1, 2, 3, 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "anime"
length = 5.3
tracks/0/type = "value"
tracks/0/path = NodePath("Prisoner/Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6, 3.7, 3.8, 3.9, 4, 4.1, 4.2, 4.3, 4.4, 4.5, 4.6, 4.7, 4.8, 4.9, 5, 5.1, 5.2, 5.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 40, 72 ), Vector2( 40, 80 ), Vector2( 40, 88 ), Vector2( 40, 96 ), Vector2( 40, 104 ), Vector2( 40, 112 ), Vector2( 40, 120 ), Vector2( 40, 128 ), Vector2( 40, 136 ), Vector2( 40, 144 ), Vector2( 40, 152 ), Vector2( 40, 160 ), Vector2( 40, 168 ), Vector2( 40, 176 ), Vector2( 40, 184 ), Vector2( 40, 192 ), Vector2( 40, 200 ), Vector2( 40, 208 ), Vector2( 40, 216 ), Vector2( 40, 224 ), Vector2( 40, 232 ), Vector2( 40, 240 ), Vector2( 40, 248 ), Vector2( 40, 256 ), Vector2( 40, 264 ), Vector2( 40, 272 ), Vector2( 40, 280 ), Vector2( 40, 288 ), Vector2( 40, 296 ), Vector2( 40, 304 ), Vector2( 40, 312 ), Vector2( 40, 320 ), Vector2( 40, 328 ), Vector2( 40, 336 ), Vector2( 40, 344 ), Vector2( 40, 352 ), Vector2( 40, 360 ), Vector2( 40, 368 ), Vector2( 40, 376 ), Vector2( 40, 384 ), Vector2( 40, 392 ), Vector2( 40, 400 ), Vector2( 40, 408 ), Vector2( 40, 416 ), Vector2( 40, 424 ), Vector2( 40, 432 ), Vector2( 40, 440 ), Vector2( 40, 448 ), Vector2( 40, 456 ), Vector2( 40, 464 ), Vector2( 40, 472 ), Vector2( 40, 480 ), Vector2( 40, 488 ), Vector2( 40, 496 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Prisoner/Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6, 3.7, 3.8, 3.9, 4, 4.1, 4.2, 4.3, 4.4, 4.5, 4.6, 4.7, 4.8, 4.9, 5, 5.1, 5.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 0, 1, 2, 3, 0, 1, 2, 3, 0, 1, 2, 3, 0, 1, 2, 3, 0, 1, 2, 3, 0, 1, 2, 3, 0, 1, 2, 3, 0, 1, 2, 3, 0, 1, 2, 3, 0, 1, 2, 3, 0, 1, 2, 3, 0, 1, 2, 3, 0 ]
}

[node name="Ending" type="Node2D"]
script = ExtResource( 4 )

[node name="DarkLight" parent="." instance=ExtResource( 6 )]

[node name="Map" type="StaticBody2D" parent="."]

[node name="Ground" type="TileMap" parent="Map"]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 28, 3, 1, 29, 1, 2, 29, 1, 3, 29, 1, 4, 28, 4, 65536, 27, 65536, 65537, 15, 196609, 65538, 15, 196611, 65539, 15, 196612, 65540, 27, 65536, 131072, 27, 65536, 131073, 15, 262145, 131074, 15, 262147, 131075, 15, 262148, 131076, 27, 65536, 196608, 27, 65536, 196609, 15, 327681, 196610, 15, 327683, 196611, 15, 327684, 196612, 27, 65536, 196613, 16, 262144, 196614, 16, 262145, 196615, 16, 262145, 196616, 16, 262145, 196617, 16, 262145, 196618, 20, 4, 262144, 27, 65536, 262145, 12, 0, 262146, 12, 0, 262147, 12, 0, 262148, 27, 65536, 262149, 15, 196609, 262150, 15, 196611, 262151, 15, 196611, 262152, 15, 196611, 262153, 15, 196612, 262154, 15, 65536, 327680, 27, 65536, 327681, 12, 65536, 327682, 12, 65536, 327683, 12, 65536, 327684, 27, 65536, 327685, 15, 262145, 327686, 15, 262147, 327687, 15, 262147, 327688, 15, 262147, 327689, 15, 262148, 327690, 15, 65536, 393216, 27, 65536, 393217, 12, 65536, 393218, 12, 65536, 393219, 12, 65536, 393220, 27, 131072, 393221, 15, 327681, 393222, 15, 327683, 393223, 15, 327683, 393224, 15, 327683, 393225, 15, 327684, 393226, 15, 65536, 458752, 27, 65536, 458753, 12, 65536, 458754, 12, 65536, 458755, 12, 65536, 458756, 15, 196608, 458757, 12, 0, 458758, 12, 0, 458759, 12, 0, 458760, 12, 0, 458761, 12, 0, 458762, 15, 65536, 524288, 27, 65536, 524289, 12, 65536, 524290, 12, 65536, 524291, 12, 65536, 524292, 15, 262144, 524293, 12, 65536, 524294, 12, 65536, 524295, 12, 65536, 524296, 12, 65536, 524297, 12, 65536, 524298, 15, 65536, 589824, 27, 65536, 589825, 12, 65536, 589826, 12, 65536, 589827, 12, 65536, 589828, 15, 327680, 589829, 12, 65536, 589830, 12, 65536, 589831, 12, 65536, 589832, 12, 65536, 589833, 12, 65536, 589834, 15, 65536, 655360, 27, 65536, 655361, 12, 65536, 655362, 12, 65536, 655363, 12, 65536, 655364, 12, 0, 655365, 12, 65536, 655366, 12, 65536, 655367, 12, 65536, 655368, 12, 65536, 655369, 12, 65536, 655370, 15, 65536, 720896, 27, 65536, 720897, 12, 65536, 720898, 12, 65536, 720899, 12, 65536, 720900, 12, 65536, 720901, 12, 65536, 720902, 12, 65536, 720903, 12, 65536, 720904, 12, 65536, 720905, 12, 65536, 720906, 15, 65536, 786432, 27, 65536, 786433, 12, 65536, 786434, 12, 65536, 786435, 12, 65536, 786436, 15, 0, 786437, 16, 262144, 786438, 16, 262145, 786439, 16, 262145, 786440, 16, 262145, 786441, 16, 262145, 786442, 20, 65540, 851968, 27, 65536, 851969, 12, 65536, 851970, 12, 65536, 851971, 12, 65536, 851972, 27, 65536, 851973, 16, 262144, 851974, 16, 262145, 851975, 16, 262145, 851976, 16, 262145, 851977, 16, 262145, 851978, 20, 4, 917504, 27, 65536, 917505, 12, 65536, 917506, 12, 65536, 917507, 12, 65536, 917508, 27, 65536, 917509, 15, 196609, 917510, 15, 196611, 917511, 15, 196611, 917512, 15, 196611, 917513, 15, 196612, 917514, 15, 65536, 983040, 27, 65536, 983041, 12, 65536, 983042, 12, 65536, 983043, 12, 65536, 983044, 27, 65536, 983045, 15, 262145, 983046, 15, 262147, 983047, 15, 262147, 983048, 15, 262147, 983049, 15, 262148, 983050, 15, 65536, 1048576, 27, 65536, 1048577, 12, 65536, 1048578, 12, 65536, 1048579, 12, 65536, 1048580, 15, 131072, 1048581, 15, 327681, 1048582, 15, 327683, 1048583, 15, 327683, 1048584, 15, 327683, 1048585, 15, 327684, 1048586, 15, 65536, 1114112, 27, 65536, 1114113, 12, 65536, 1114114, 12, 65536, 1114115, 12, 65536, 1114116, 15, 196608, 1114117, 12, 0, 1114118, 12, 0, 1114119, 12, 0, 1114120, 12, 0, 1114121, 12, 0, 1114122, 15, 65536, 1179648, 15, 65536, 1179649, 12, 65536, 1179650, 12, 65536, 1179651, 12, 65536, 1179652, 15, 262144, 1179653, 12, 65536, 1179654, 12, 65536, 1179655, 12, 65536, 1179656, 12, 65536, 1179657, 12, 65536, 1179658, 15, 65536, 1245184, 15, 65536, 1245185, 12, 65536, 1245186, 12, 65536, 1245187, 12, 65536, 1245188, 15, 327680, 1245189, 12, 65536, 1245190, 12, 65536, 1245191, 12, 65536, 1245192, 12, 65536, 1245193, 12, 65536, 1245194, 15, 65536, 1310720, 15, 65536, 1310721, 12, 65536, 1310722, 12, 65536, 1310723, 12, 65536, 1310724, 12, 0, 1310725, 12, 65536, 1310726, 12, 65536, 1310727, 12, 65536, 1310728, 12, 65536, 1310729, 12, 65536, 1310730, 15, 65536, 1376256, 15, 65536, 1376257, 12, 65536, 1376258, 12, 65536, 1376259, 12, 65536, 1376260, 12, 65536, 1376261, 12, 65536, 1376262, 12, 65536, 1376263, 12, 65536, 1376264, 12, 65536, 1376265, 12, 65536, 1376266, 15, 65536, 1441792, 15, 65536, 1441793, 12, 65536, 1441794, 12, 65536, 1441795, 12, 65536, 1441796, 15, 0, 1441797, 16, 262144, 1441798, 16, 262145, 1441799, 16, 262145, 1441800, 16, 262145, 1441801, 16, 262145, 1441802, 20, 65540, 1507328, 15, 65536, 1507329, 12, 65536, 1507330, 12, 65536, 1507331, 12, 65536, 1507332, 27, 65536, 1507333, 16, 262144, 1507334, 16, 262145, 1507335, 16, 262145, 1507336, 16, 262145, 1507337, 16, 262145, 1507338, 20, 4, 1572864, 15, 65536, 1572865, 12, 65536, 1572866, 12, 65536, 1572867, 12, 65536, 1572868, 27, 65536, 1572869, 15, 196609, 1572870, 15, 196611, 1572871, 15, 196611, 1572872, 15, 196611, 1572873, 15, 196612, 1572874, 15, 65536, 1638400, 15, 65536, 1638401, 12, 65536, 1638402, 12, 65536, 1638403, 12, 65536, 1638404, 27, 65536, 1638405, 15, 262145, 1638406, 15, 262147, 1638407, 15, 262147, 1638408, 15, 262147, 1638409, 15, 262148, 1638410, 15, 65536, 1703936, 15, 65536, 1703937, 12, 65536, 1703938, 12, 65536, 1703939, 12, 65536, 1703940, 27, 131072, 1703941, 15, 327681, 1703942, 15, 327683, 1703943, 15, 327683, 1703944, 15, 327683, 1703945, 15, 327684, 1703946, 15, 65536, 1769472, 15, 65536, 1769473, 12, 65536, 1769474, 12, 65536, 1769475, 12, 65536, 1769476, 15, 196608, 1769477, 12, 0, 1769478, 12, 0, 1769479, 12, 0, 1769480, 12, 0, 1769481, 12, 0, 1769482, 15, 65536, 1835008, 15, 65536, 1835009, 12, 65536, 1835010, 12, 65536, 1835011, 12, 65536, 1835012, 15, 262144, 1835013, 12, 65536, 1835014, 12, 65536, 1835015, 12, 65536, 1835016, 12, 65536, 1835017, 12, 65536, 1835018, 15, 65536, 1900544, 15, 65536, 1900545, 12, 65536, 1900546, 12, 65536, 1900547, 12, 65536, 1900548, 15, 327680, 1900549, 12, 65536, 1900550, 12, 65536, 1900551, 12, 65536, 1900552, 12, 65536, 1900553, 12, 65536, 1900554, 15, 65536, 1966080, 15, 65536, 1966081, 12, 65536, 1966082, 12, 65536, 1966083, 12, 65536, 1966084, 12, 0, 1966085, 12, 65536, 1966086, 12, 65536, 1966087, 12, 65536, 1966088, 12, 65536, 1966089, 12, 65536, 1966090, 15, 65536, 2031616, 15, 65536, 2031617, 12, 65536, 2031618, 12, 65536, 2031619, 12, 65536, 2031620, 12, 65536, 2031621, 12, 65536, 2031622, 12, 65536, 2031623, 12, 65536, 2031624, 12, 65536, 2031625, 12, 65536, 2031626, 15, 65536, 2097152, 15, 65536, 2097153, 12, 65536, 2097154, 12, 65536, 2097155, 12, 65536, 2097156, 16, 262144, 2097157, 16, 262145, 2097158, 16, 262145, 2097159, 16, 262145, 2097160, 16, 262145, 2097161, 16, 262145, 2097162, 20, 65540 )

[node name="Details" type="TileMap" parent="Map"]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 131073, 57, 0, 393221, 71, 0, 393223, 48, 0, 393225, 65, 0, 1048581, 71, 0, 1048583, 48, 0, 1048585, 65, 0, 1638405, 71, 0, 1638407, 48, 0, 1638409, 65, 0 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 112, 648 )
current = true

[node name="perso" type="StaticBody2D" parent="."]

[node name="First Guard" type="AnimationPlayer" parent="perso"]
anims/anime = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="perso/First Guard"]
position = Vector2( 24, 72 )
texture = ExtResource( 3 )
hframes = 16
__meta__ = {
"_edit_group_": true
}

[node name="Last Guard" type="AnimationPlayer" parent="perso"]
anims/anime = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="perso/Last Guard"]
position = Vector2( 56, 72 )
texture = ExtResource( 3 )
hframes = 16
__meta__ = {
"_edit_group_": true
}

[node name="Prisoner" type="AnimationPlayer" parent="perso"]
anims/anime = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="perso/Prisoner"]
position = Vector2( 112, 648 )
texture = ExtResource( 3 )
hframes = 16
frame = 1

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="perso/Prisoner/Sprite"]
remote_path = NodePath("../../../../Camera2D")

[node name="FadeToBlack" parent="." instance=ExtResource( 5 )]

[node name="FadeToBlack2" parent="." instance=ExtResource( 5 )]

[node name="FadeToBlack3" parent="." instance=ExtResource( 5 )]
position = Vector2( 0, 24 )
